--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # Never commit build specific folders
-node_modules/
+**/node_modules/
 dist/
 
 # dependencies
@@ -9,10 +9,10 @@ dist/
 .pnp.js
 
 # testing
-coverage/
+frontend/coverage/
 
 # production
-build/
+frontend/build/
 
 # Never commit individual sessions
 .DS_Store
@@ -28,7 +28,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-package-lock.json
+**/package-lock.json
 
 # Never commit temporary storage
 *.swp
