--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -3,9 +3,13 @@ name: Production Build
 on: [push]
 
 jobs:
-  build:
+  build-frontend:
     runs-on: ubuntu-latest
 
+    defaults: 
+      run:
+        working-directory: frontend
+        
     strategy:
       matrix:
         node-version: [16.x]
