--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -9,7 +9,7 @@ jobs:
     defaults: 
       run:
         working-directory: frontend
-        
+
     strategy:
       matrix:
         node-version: [16.x]
@@ -32,8 +32,7 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
-      - name: Run linters
-        run: yarn lint
-
+      - name: Build project
+        run: yarn build
         env:
           CI: true
