--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -3,8 +3,12 @@ name: Production Build
 on: [push]
 
 jobs:
-  build:
+  build-frontend:
     runs-on: ubuntu-latest
+
+    defaults: 
+      run:
+        working-directory: frontend
 
     strategy:
       matrix:
@@ -28,8 +32,7 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
-      - name: Run linters
-        run: yarn lint
-
+      - name: Build project
+        run: yarn build
         env:
           CI: true
