--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "scripts": {
     "prepare": "husky install"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.0",
+    "facebook-sdk": "^0.3.3"
   }
-
 }
