--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "babelify": "^10.0.0",
     "browserify": "^17.0.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.5.1",
+    "prettier": "^2.6.1",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "stylelint-config-prettier": "^9.0.3"
@@ -26,6 +27,7 @@
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.32.0",
     "babel-loader": "^8.2.3",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
