--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.1
 MarkupSafe==2.1.1
 pycodestyle==2.8.0
+PyJWT==2.3.0
 python-dotenv==0.20.0
 requests==2.27.1
 toml==0.10.2
