--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,11 @@
     "pre-commit": "yarn lint-fix || true"
   },
   "dependencies": {
+    "@types/base-64": "^1.0.0",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.10",
     "babelify": "^10.0.0",
+    "base-64": "^1.0.0",
     "browserify": "^17.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.1",
